--- a/p1/styles.css
+++ b/p1/styles.css
@@ -17,10 +17,71 @@ header {
     box-shadow: 0 4px 10px rgba(236, 64, 122, 0.3);
 }
 
-
-
 li {
     display: inline-block;
     font-size: 18px;
     padding: 5px 15px;
+}
+
+header ul {
+    list-style: none;
+}
+
+header ul li {
+    display: inline-block;
+    font-size: 22px;
+    padding: 5px 10px;
+}
+
+header ul li a {
+    text-decoration: none;
+    color: white;
+}
+header ul li a:hover {
+    text-decoration: underline;
+    color: lightgray;
+}
+
+button:hover {
+    background-color: darkblue;
+    cursor: pointer;
+}
+
+.row
+{
+    display: flex;
+    padding: 22px;
+    justify-content: space-around;
+}
+.box
+{
+    width: 500px;
+    padding: 30px;
+}
+.title
+{
+    text-align: center;
+}
+#para
+{
+    font-size: 20px;
+    font-weight: 400;
+}
+button
+{
+    padding: 9px;
+    background-color: blue;
+    color: white;
+    font-size: 14px;
+    border-radius: 4px;
+    width: 100px;
+}
+#home 
+{
+    background: linear-gradient(to right, #e3f2fd, #ffffff);
+    padding: 40px 0;
+}
+.box img {
+    border-radius: 50px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
