--- a/p1/styles.css
+++ b/p1/styles.css
@@ -62,7 +62,9 @@ button:hover {
 .box {
     width: 500px;
     padding: 30px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
+
 
 .title {
     text-align: center;
@@ -96,6 +98,11 @@ button:hover {
 .box img {
     border-radius: 50px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+     transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.box img:hover {
+    transform: scale(1.05);
 }
 
 #projects {
