--- a/food-mart/styles.css
+++ b/food-mart/styles.css
@@ -84,7 +84,6 @@ nav {
     display: block;
     font-size: 18px;
     font-weight: bold;
-    color: #ff5733;
     margin-top: 5px;
 }
 
@@ -120,9 +119,201 @@ nav {
     color: #333;
 }
 
+
+
 .price {
     font-size: 18px;
     font-weight: bold;
     color: #ff5733;
     margin-top: 4px;
 }
+
+
+
+.secondary-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background: #fff; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.secondary-nav select {
+    padding: 8px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.secondary-nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+}
+
+.secondary-nav ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+}
+
+.promotions {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 40px;
+    height: 500px;
+    background-image: url('images/background-pattern.jpg');  
+}
+
+
+.promo-item.large {
+    flex: 0 0 65%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-image: url('images/smoothie.jpg'); 
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 40px;
+    border-radius: 10px;
+    transition: transform 0.4s ease-in-out;
+}
+
+.promo-content {
+    width: 50%;
+}
+
+.promo-content h2 {
+    font-size: 30px !important;
+    margin-bottom: 10px;
+    color: black;
+    font: 'Poppins', sans-serif !important;
+    font-weight: bold;
+}
+
+.promo-content p {
+    font-size: 24px !important;
+    margin-bottom: 20px;
+    color: rgb(219, 199, 48) ;
+    font-family: 'Poppins', sans-serif !important;
+}
+
+.promo-content button {
+    padding: 12px 24px;
+    color: black;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: rgb(228,243,250);
+    border: #333 1px solid;
+    font-family: 'Poppins', sans-serif !important;
+}
+
+.promo-content button:hover {
+    background-color: rgb(200, 220, 250); 
+    color: black;
+    border-color: #222;
+    transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
+}
+
+
+.promo-side {
+    flex: 0 0 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.promo-item.small {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    width: 100%;
+    border-radius: 10px;
+    padding: 30px;
+    transition: transform 0.4s ease-in-out;
+}
+
+
+.promo-item h2 {
+    font-size: 28px !important;
+    font-family: 'Poppins', sans-serif !important;
+    font-weight: 700;
+    color: black !important;
+    text-align: left !important; 
+}
+
+.promo-item h2:hover {
+    color: rgb(219, 199, 48); 
+    transition: color 0.3s ease-in-out;
+}
+
+
+.promo-item p {
+    text-align: left !important; 
+    width: 100%;
+    padding-left: 10px; 
+    color: rgb(56, 51, 51);
+}
+
+.promo-item p:hover {
+    color: #333;
+    transition: color 0.3s ease-in-out;
+}
+
+.veggies {
+    background-image: url('images/veggies.jpg');
+    padding: 30px;
+}
+
+.baked {
+    background-image: url('images/bread.jpg');
+    padding: 30px;
+}
+
+.promo-item h2 {
+    font-size: 20px !important;
+    font-family: 'Poppins', sans-serif !important;
+    font-weight: 700;
+    color: black !important;
+    text-align: center;
+}
+
+.promo-item.small:hover {
+    transform: scale(1.08);
+}
+
+.promo-item.large:hover {
+    transform: scale(1.05);
+}
+
+.separator {
+    width: 40%;
+    height: 2px;
+    background-color: black;
+    display: inline-block;
+    margin: 6px 0;
+}
+
+.separator:hover {
+    background-color: rgb(219, 199, 48); 
+    transition: background-color 0.3s ease-in-out;
+}
+
+.sale-text {
+    font-size: 10px;
+    font-weight: bold;
+    color: black;
+}
+
+
