--- a/food-mart/styles.css
+++ b/food-mart/styles.css
@@ -200,7 +200,7 @@ nav {
 .promo-content p {
     font-size: 24px !important;
     margin-bottom: 20px;
-    color: rgb(219, 199, 48) ;
+    color: rgb(219, 199, 48) !important;
     font-family: 'Poppins', sans-serif !important;
 }
 
