--- a/food-mart/styles.css
+++ b/food-mart/styles.css
@@ -488,3 +488,95 @@ nav {
 }
 
 
+.new-products {
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.products-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+
+.filter-options {
+    display: flex;
+    gap: 15px;
+}
+
+.filter-text {
+    font-size: 16px;
+    font-weight: bold;
+    color: #444;
+}
+
+
+.products-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+}
+
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    background: #f8f8f8;
+    border-radius: 8px;
+    position: relative;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+
+.like-icon {
+    width: 24px !important; 
+    height: 24px !important;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: white; 
+    border-radius: 50%; 
+    padding: 4px;
+    cursor: pointer;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.like-icon:hover {
+    opacity: 0.9;
+    transform: scale(1.1);
+}
+
+
+.product-card img {
+    width: 80px;
+    height: 80px;
+}
+
+.product-card h2 {
+    font-size: 14px;
+}
+
+.product-card p {
+    font-size: 14px;
+    color: #444;
+    margin: 5px 0;
+}
+
+.product-card p:last-child {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000;
+}
+
+.product-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.15);
+}
