--- a/p1/styles.css
+++ b/p1/styles.css
@@ -113,6 +113,7 @@ header ul li a:hover {
 
 
 .box {
+    flex:auto;
    width: 48%; 
     max-width: 500px;
     padding: 30px;
@@ -152,7 +153,7 @@ button:hover {
 
 .box img {
     width: 100%;
-    max-width: 350px; 
+    max-width: 400px; 
     height: auto;
     border-radius: 12px;
     transition: transform 0.4s ease-in-out;
