--- a/p1/styles.css
+++ b/p1/styles.css
@@ -112,8 +112,15 @@ header ul li a:hover {
 }
 
 
-.box {
-    flex:auto;
+.box1 {
+    flex:0 0 45%;
+   width: 48%; 
+    max-width: 500px;
+    padding: 30px;
+}
+
+.box1 {
+    flex:0 0 50%;
    width: 48%; 
     max-width: 500px;
     padding: 30px;
@@ -151,15 +158,15 @@ button:hover {
     padding: 40px 0;
 }
 
-.box img {
+.box2 img {
     width: 100%;
-    max-width: 320px; 
+    max-width: 500px; 
     height: auto;
     border-radius: 12px;
     transition: transform 0.4s ease-in-out;
 }
 
-.box img:hover {
+.box2 img:hover {
     transform: scale(1.08);
 }
 
