--- a/a9/style.css
+++ b/a9/style.css
@@ -118,13 +118,13 @@ button:hover {
   margin-top: 20px;
   font-weight: 700;
   font-size: 20px;
-  color: #fff;
+  color: rgba(45, 45, 45, 0.7);
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   opacity: 0;
   transition: opacity 0.5s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .show-result {
-  opacity: 1;
+  opacity: 1 !important;
   transform: translateY(-5px);
 }
