--- a/Bank-ATM/style.css
+++ b/Bank-ATM/style.css
@@ -9,7 +9,6 @@ body {
     height: 100vh;
 }
 
-
 .atm-box, .welcome-box {
     background: rgba(255, 255, 255, 0.1);
     padding: 35px;
@@ -29,21 +28,19 @@ body {
     border-top: 1.5px solid #fff;
     margin: 20px 0;
     width: 100%;
-    height: 0;
     background: transparent;
 }
 
-
-h1 {
+h1, h2 {
     color: #fff;
     font-size: 24px;
 }
 
-h2 {
-    color: #fff;
-    font-size: 22px;
+.balance-text {
+    font-size: 18px;
+    color: #ffd700;
+    font-weight: bold;
 }
-
 
 input {
     width: 100%;
@@ -60,9 +57,16 @@ input::placeholder {
     color: rgba(255, 255, 255, 0.7);
 }
 
+.action-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 100%;
+}
 
 button {
     width: 100%;
+    gap : 12px;
     padding: 12px;
     background: #ffd700;
     color: black;
@@ -79,6 +83,14 @@ button:hover {
     transform: translateY(-2px);
 }
 
+.logout-btn {
+    background: #ff5252;
+    color: #fff;
+}
+
+.logout-btn:hover {
+    background: #ff2e2e;
+}
 
 #errorMsg {
     color: #ff5252;
@@ -86,9 +98,92 @@ button:hover {
     font-size: 14px;
 }
 
-
 .hidden {
     display: none;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
 }
+
+.transaction-section {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+    margin-top: 15px;
+}
+
+.transaction {
+    align-items: normal;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+#amountField , #transferField {
+    align-self: center;
+    width: 100% !important; 
+    padding-right: 7%;
+}
+
+select {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    background: rgba(255, 255, 255, 0.3);
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(8px);
+    transition: all 0.3s ease;
+}
+
+select option {
+    background: rgba(255, 255, 255, 0.8);  
+    color: #000;  
+}
+select:hover {
+    background: rgba(255, 255, 255, 0.4);
+}
+
+select:focus {
+    outline: none;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+
+#welcomeBox input {
+    flex: 1;
+    padding: 12px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    text-align: center;
+}
+
+#welcomeBox input:focus {
+    background: rgba(255, 255, 255, 0.3);
+    outline: none;
+}
+
+.logout-btn {
+    background: #ff5252;
+    color: #fff;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.logout-btn:hover {
+    background: #ff2e2e;
+}
+
+.transaction-section input[type="number"]::-webkit-inner-spin-button,
+.transaction-section input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
